--- a/fun_theme.html
+++ b/fun_theme.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <title>Fun Theme</title>
    <link rel="stylesheet" href="fun_theme.css">
-    
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+   <script src="js/main.js"></script>
 </head>
 <body>
-    
+  <header class="table">
+    <div id="mobile-nav" class="i-mobile-nav td td-center-vert">
+      <a href="#menu" id="mobile-nav-link" class="box-shadow-menu">
+        Menu
+      </a>
+      <ul id="mobile-nav-list" class="mobile-nav" >
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </header>
 </body>
 </html>
