--- a/fun_theme.html
+++ b/fun_theme.html
@@ -5,8 +5,8 @@
   <title>Fun Theme</title>
   <link rel="stylesheet" href="fun_theme.css">
   <!--  Include jQuery -->
-  <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="js/main.js"></script>
 </head>
 <body>
   <header class="table">
